--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.6.5",
     "node-telegram-bot-api": "^0.64.0",
     "reflect-metadata": "^0.1.13",
+    "telegraf": "^4.15.0",
     "typeorm": "^0.3.17"
   }
 }
