--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "telegram-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "./src/index.ts",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "i": "^0.3.7",
+    "npm": "^10.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
@@ -22,6 +24,7 @@
     "node-telegram-bot-api": "^0.64.0",
     "reflect-metadata": "^0.1.13",
     "telegraf": "^4.15.0",
+    "typegram": "^5.2.0",
     "typeorm": "^0.3.17"
   }
 }
