--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-telegram-bot-api": "^0.64.0",
     "reflect-metadata": "^0.1.13",
     "telegraf": "^4.15.0",
+    "telegraf-session-local": "^2.1.1",
     "typegram": "^5.2.0",
     "typeorm": "^0.3.17"
   }
