--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "date-fns": "^3.0.0-alpha.2",
     "dotenv": "^16.3.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
