--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "date-fns": "^3.0.0-alpha.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "node-telegram-bot-api": "^0.64.0",
